--- a/easy_reporter/requirements.txt
+++ b/easy_reporter/requirements.txt
@@ -1,12 +1,23 @@
+anyio==4.11.0
 asgiref==3.9.2
 certifi==2025.8.3
 channels==4.3.1
 charset-normalizer==3.4.3
+click==8.3.0
+colorama==0.4.6
 django==5.2.6
+h11==0.16.0
+httptools==0.6.4
 idna==3.10
 pillow==11.3.0
+python-dotenv==1.1.1
+pyyaml==6.0.3
 requests==2.32.5
+sniffio==1.3.1
 sqlparse==0.5.3
+typing-extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.37.0
+watchfiles==1.1.0
 websockets==15.0.1
