--- a/easy_reporter/requirements.txt
+++ b/easy_reporter/requirements.txt
@@ -5,6 +5,7 @@ channels==4.3.1
 charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
+consumers==0.6.1
 django==5.2.6
 h11==0.16.0
 httptools==0.6.4
